chore: Update Docker configuration for backend and frontend services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,23 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
       - "5151:5432"
+
+  backend:
+    build:
+      context: ./app  # Adjusted to the correct relative path
+      dockerfile: DockerFile  # Specified the correct Dockerfile for the backend
+    volumes:
+      - ./app/api:/app/api
+    ports:
+      - "3000:3000"  # Adjusted to match the EXPOSE in Dockerfile-1
+    depends_on:
+      - postgres
+    env_file:
+      - .env  # Path to your .env file
+
+  frontend:
+    build:
+      context: ./src  # Adjusted to the correct relative path
+      dockerfile: DockerFile  # Specified the correct Dockerfile for the frontend
+    ports:
+      - "5500:5500"  # Adjusted to match the EXPOSE in the frontend Dockerfile
