--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,6 +22,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 openai==1.35.15
+psycopg2==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
