--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,6 @@ version: '3.8'
 services:
   postgres:
     image: postgres:latest
-    env_file:
-      - .denv
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -22,7 +20,7 @@ services:
     depends_on:
       - postgres
     env_file:
-      - .denv  # Path to your .env file
+      - .env  # Path to your .env file
 
   # frontend:
   #   build:
